# game-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: default_base_shader.vert  default_model_shader.vert  default_shader.frag  default_shader.vert  default_ui_shader.frag  default_ui_shader.vert  model_shader.frag
code/: CMakeLists.txt  main.cpp  private.hpp
libraries/: CMakeLists.txt
