#=======================================================================================================================
add_library(editor)
add_library(engine)
#=======================================================================================================================
add_subdirectory(engine)
add_subdirectory(editor)
#=======================================================================================================================